--- a/css/design-system.css
+++ b/css/design-system.css
@@ -1,7 +1,7 @@
 
 
 @import url('https://fonts.googleapis.com/css?family=Amiri:400,700|Noto+Sans+JP:400,500,900&display=swap');
-
+@import url('https://brand.ap.org/assets/scss/_ap_fonts.scss');
 /*! minireset.css v0.0.6 | MIT License */ html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*::before,*::after{box-sizing:inherit}img,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}td:not([align]),th:not([align]){text-align:left}
 
 
@@ -131,7 +131,7 @@ a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: 'Good Bold', sans-serif;
   font-weight:700;
   line-height:1;
 }
