Updatign home page

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
 
-@import url('https://fonts.googleapis.com/css?family=Amiri&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Amiri|Montserrat&display=swap');
 
 
 html {
   font-size: 1rem;
-  font-family: 'Amiri', serif;
+  font-family: 'Merriweather', serif;
   background-color: #eaeaea;
 }
 
@@ -25,29 +23,16 @@ a:hover {
 }
 
 main {
-  width: 80vw;
+  display:grid;
+  grid-template-columns: 2fr 1fr ;
+  grid-auto-rows:min-content;
+  grid-gap:2rem;
+  width: 40vw;
   margin: 0 auto;
 }
 
-section {
-  display:grid;
-  grid-template-columns: 1fr 2fr;
-  grid-auto-rows:min-content;
-  grid-gap:2rem;
-}
-
-#sessions {
-    grid-column:1;
-    border-top: 5px solid #7C878E;
-    margin-top:3rem;
-    padding: 3rem 0;  
-}
-
-#students {
-    grid-column:2;
-    border-top: 5px solid #7C878E;
-    margin-top:3rem;
-    padding: 3rem 0;  
+.intro-block {
+  grid-column:1 / 3;
 }
 
 
@@ -66,19 +51,22 @@ section {
 
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight:700;
+  font-family: 'Merriweather Sans', sans-serif;
   margin-bottom:1rem;
 }
 
 h1 {
   font-size:3.375rem;
+  font-weight:800;
+
 }
 h2 {
   font-size:2.25rem;
 }
 h3 {
   font-size:1.5rem;
+  font-weight:300;
+
 }
 h4 {
   font-size:1rem;
@@ -93,11 +81,25 @@ li {
 }
 
 p {
+  font-size: 1.125rem;
+  line-height: 1.5;
+  margin-bottom:1rem;
+}
+
+.location {
   font-size: 1rem;
+  font-family: 'Merriweather Sans', sans-serif;
+  text-transform: uppercase;
   line-height: 1.5;
 }
 
 img {
   display: block;
   margin: 0 auto;
+}
+
+figcaption {
+  font-size: .875rem;
+  font-family: 'Merriweather Sans', sans-serif;
+  padding-top: 1rem;
 }
