--- a/css/type-variations.css
+++ b/css/type-variations.css
@@ -3,8 +3,8 @@
 
 html {
   font-size: 1rem;
-  font-family: 'Merriweather', serif;
-  background-color: #eaeaea;
+  font-family: 'Lora', serif;
+  background-color: #fff;
 }
 
 body {
@@ -27,16 +27,18 @@ main {
   grid-template-columns: 2fr 1fr ;
   grid-auto-rows:min-content;
   grid-gap:2rem;
-  width: 40vw;
+  max-width: 30vw;
   margin: 0 auto;
 }
+
+
 
 .intro-block {
   grid-column:1 / 3;
 }
 
-.statement {
-  grid-column:1 / 2;
+.article {
+  grid-column:1 / 3;
 }
 
 .projects {
@@ -58,20 +60,21 @@ main {
 
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Merriweather Sans', sans-serif;
+  font-family: 'Lora', serif;
   margin-bottom:1rem;
 }
 
 h1 {
   font-size:3.375rem;
-  font-weight:800;
+  font-weight:700;
+  font-style: italic;
 }
 h2 {
   font-size:2.25rem;
 }
 h3 {
   font-size:1.5rem;
-  font-weight:300;
+  font-weight:400;
 
 }
 h4 {
@@ -81,12 +84,13 @@ h4 {
 
 li {
   font-size: 1.25rem;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Lora', serif;
   line-height: 1.5;
   padding: .5rem 0;
 }
 
 p {
+  font-family: 'Work Sans', sans-serif;
   font-size: 1.125rem;
   line-height: 1.5;
   margin-bottom:1rem;
@@ -94,9 +98,18 @@ p {
 
 .location {
   font-size: 1rem;
-  font-family: 'Merriweather Sans', sans-serif;
+  font-family: 'Lora', serif;
   text-transform: uppercase;
   line-height: 1.5;
+}
+
+.pull-quote {
+  font-size: 2.25rem;
+  font-family: 'Lora', serif;
+  line-height: 1.5;
+  font-weight:400;
+  padding:2rem;
+
 }
 
 img {
@@ -106,6 +119,6 @@ img {
 
 figcaption {
   font-size: .875rem;
-  font-family: 'Merriweather Sans', sans-serif;
+  font-family: 'Lora', serif;
   padding-top: 1rem;
 }
