--- a/css/type-variations.css
+++ b/css/type-variations.css
@@ -9,7 +9,7 @@ html {
 
 body {
   padding:5rem 0;
-  color:#333F48;
+  color:#000;
 }
 
 a {
@@ -109,7 +109,6 @@ p {
   line-height: 1.5;
   font-weight:400;
   padding:2rem;
-
 }
 
 img {
