--- a/css/tv-expressive.css
+++ b/css/tv-expressive.css
@@ -9,7 +9,7 @@ html {
 
 body {
   padding:5rem 0;
-  color:#333F48;
+  color:#000;
 }
 
 a {
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size:8rem;
+  font-size:10rem;
   font-weight:700;
   font-style: italic;
 }
